<resources>

    <string name="app_name">FinMan</string>
    <string name="hello_world">FinMan\nYour Personal Finance Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Welcome!</string>
    <string name="title_activity_camera">BillShot</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Transactions</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="add_transaction">Add</string>
    <string name="add_billshot">Capture</string>
    <string name="listbills">List</string>
    <string name="search_transaction">Search</string>
    <string name="help">Help</string>
    <string name="album_name">FinMan</string>
    <string name="cannot">Cannot</string>
    <string name="message_memorycard_unmounted">Memory Card Not Mounted</string>
    <string name="title_memorycard_unmounted">No Memory Card</string>
    <string name="title_activity_open_cv">OpenCVActivity</string>
    <string name="newbill_name">Name</string>
    <string name="newbill_save">Save</string>
    <string name="newbill_add">Add</string>
    <string name="newbill_itemName">Item Name</string>
    <string name="newbill_itemPrice">Item Price</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list_bills">ListBillsActivity</string>
    
    <string name="billimage">Bill Image</string>
    <string name="billviewdetails">View Details</string>

</resources>