<menu xmlns:android="http://schemas.android.com/apk/res/android">    

    <item android:id="@+id/menu_search_transaction"
          android:icon="@drawable/action_search"
          android:title="@string/search_transaction"
          android:showAsAction="ifRoom|withText|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />    
    <item android:id="@+id/menu_add_transaction"
          android:icon="@drawable/content_new"
          android:title="@string/add_transaction"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_add_billshot"
          android:icon="@drawable/device_access_camera"
          android:title="@string/add_billshot"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_listbills"
          android:icon="@drawable/collections_view_as_list"
          android:title="@string/listbills"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_help"
          android:icon="@drawable/action_help"
          android:title="@string/help" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
